--- a/css/buy.css
+++ b/css/buy.css
@@ -22,7 +22,7 @@ canvas {
   flex-direction: column;
   min-height: 100vh;
   position: relative;
-  z-index: 0; 
+  z-index: 0;
 }
 
 /* ------------------------------------ TITLE */
@@ -186,7 +186,7 @@ canvas {
   justify-content: space-around;
 }
 
-/* REDES SCIALES */
+/* SOCIAL */
 .social-wrapper {
   display: flex;
   gap: 10px;
@@ -217,4 +217,74 @@ canvas {
   background-color: #191919;
   color: #d5ad72;
   position: relative;
+}
+
+/* ------------------------------------ MEDIA QUERIES */
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+    min-width: auto;
+    width: 100%;
+    max-width: 100vw;
+  }
+
+  .title {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  .menu {
+    flex-direction: row;
+    width: 100%;
+  }
+
+  .menu a {
+    margin-bottom: 0;
+    margin-top: 50px;
+    font-size: 14px;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .description {
+    width: 300px;
+    min-width: 300px;
+  }
+
+  .footer {
+    padding: 10px 20px;
+  }
+
+  .footer-container {
+    margin-top: 20px;
+    font-size: 12px;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-left: 15px;
+  }
+
+  .social-wrapper {
+    align-items: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 30px;
+  }
+
+  .menu a {
+    padding: 8px 10px;
+  }
+
+  .description {
+    font-size: 14px;
+  }
+
+  .store-button {
+    font-size: 14px;
+  }
 }
