--- a/css/features.css
+++ b/css/features.css
@@ -207,8 +207,8 @@ canvas {
 
 /* ------------------------------------ FOOTER */
 .footer {
+  background-color: #00000000;
   color: white;
-  background-color: #0000000a;
   padding: 20px;
   text-align: center;
   position: fixed;
@@ -221,7 +221,7 @@ canvas {
   justify-content: space-around;
 }
 
-/* REDES SCIALES */
+/* SOCIAL */
 .social-wrapper {
   display: flex;
   gap: 10px;
@@ -323,4 +323,128 @@ canvas {
   font-size: 14px;
   color: #777;
   line-height: 1.4;
+}
+
+/* ------------------------------------ MEDIA QUERIES */
+@media (max-width: 768px) {
+  canvas {
+    width: 100%;
+    height: 140%
+  }
+
+  .content-container {
+    padding-top: 100px;
+    padding-bottom: 60px;
+  }
+
+  .menu {
+    flex-direction: row;
+    width: 100%;
+    background-color: #000000;
+  }
+
+  .menu a {
+    margin-bottom: 0;
+    margin-top: 50px;
+    font-size: 14px;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .title {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+
+  .feature-item {
+    width: 90%;
+    height: auto;
+    min-height: 400px;
+    margin: 15px auto;
+  }
+
+  .feature-media img {
+    max-width: 80%;
+    max-height: 80%;
+    margin: 10px auto;
+  }
+
+  .feature-description h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
+  }
+
+  .feature-description p {
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  .cards {
+    flex-direction: column;
+    gap: 30px;
+    padding: 20px 0;
+    margin-top: 10%;
+  }
+
+  .card {
+    width: 280px;
+    height: 200px;
+  }
+
+  .footer {
+    background-color: #0000009c;
+    padding: 10px 20px;
+  }
+
+  .footer-container {
+    margin-top: 20px;
+    font-size: 12px;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-left: 15px;
+  }
+
+  .social-wrapper {
+    align-items: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .content-container {
+    padding-top: 80px;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+
+  .menu a {
+    padding: 6px 8px;
+    font-size: 12px;
+  }
+
+  .feature-item {
+    width: 95%;
+  }
+
+  .feature-description h2 {
+    font-size: 20px;
+  }
+
+  .feature-description p {
+    font-size: 14px;
+  }
+
+  .social-wrapper {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .social-wrapper > div + div {
+    border-inline-start: none;
+    padding-inline-start: 0;
+  }
 }
