--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body {
   min-width: 500px;
 }
 
-#foto {
+#photo {
   border-radius: 10px;
   object-fit: cover;
 }
@@ -282,4 +282,79 @@ body {
   background-color: #191919;
   color: #d5ad72;
   position: relative;
+}
+
+/* ------------------------------------ MEDIA QUERIES */
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+    min-width: auto;
+    width: 100%;
+    max-width: 100vw;
+  }
+
+  .title {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  .menu {
+    flex-direction: row;
+    width: 100%;
+  }
+
+  .menu a {
+    margin-bottom: 0;
+    margin-top: 50px;
+    font-size: 14px;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .header1,
+  .header2,
+  .header3 {
+    flex-direction: column;
+    height: auto;
+    gap: 20px;
+    width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+  }
+
+  .description1,
+  .description2,
+  .descripcion3 {
+    width: 90%;
+    min-width: unset;
+    margin-bottom: 100px;
+    box-sizing: border-box;
+  }
+
+  #photo {
+    width: 80%;
+    height: auto;
+    max-width: 100%;
+    margin-top: 20%;
+  }
+
+  .footer-container p {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 30px;
+  }
+
+  .menu a {
+    padding: 8px 10px;
+  }
+
+  .description1,
+  .description2,
+  .descripcion3 {
+    font-size: 14px;
+  }
 }
