--- a/css/features.css
+++ b/css/features.css
@@ -398,7 +398,6 @@ canvas {
 
   .footer-container {
     margin-top: 20px;
-    font-size: 11px;
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -407,10 +406,11 @@ canvas {
     margin-left: 15px;
   }
 
-  .social-wrapper {
-    align-items: center;
+  .footer-container p {
+    font-size: 11px;
   }
 }
+  
 
 @media (max-width: 480px) {
   .content-container {
