--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ body {
   justify-content: space-around;
 }
 
-/* REDES SCIALES */
+/* SOCIAL */
 .social-wrapper {
   display: flex;
   gap: 10px;
