--- a/css/features.css
+++ b/css/features.css
@@ -390,6 +390,10 @@ canvas {
     width: 280px;
     height: 200px;
   }
+  
+  .card__title {
+    font-size: 20px;
+  }
 
   .card__description {
     font-size: 12px;
